update deps and fix liquid fire liquid-with syntax

--- a/edd-cli/app/templates/slides/slide.hbs
+++ b/edd-cli/app/templates/slides/slide.hbs
@@ -1,5 +1,5 @@
-{{#liquid-with model as slide class='slides-container' enableGrowth=false}}
+{{#liquid-bind model class='slides-container' enableGrowth=false as |slide|}}
   <div class='slide slide-{{slide.id}}'>
     {{{slide.body}}}
   </div>
-{{/liquid-with}}
+{{/liquid-bind}}
